--- a/teachdec.css
+++ b/teachdec.css
@@ -1,8 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #667eea, #764ba2);
+    background: linear-gradient(-45deg, #0F172A, #6b2f9c,#5632ab,#2a067d);
+    background-size: 400%,400%;
+    animation:darkMove 10s ease infinite;
     margin: 0;
     padding: 0;
+}
+
+@keyframes darkMove{
+    0%{background-position:0% 50%;}
+    50%{background-position:100% 50%;}
+    100%{background-position: 0% 50%;}
 }
 
 .container {
@@ -14,7 +22,7 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 40px;
-    color: #2c3e50;
+    color: #ffffff;
 }
 
 .card {
